# nanovna-saver

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  Calibration.py  Chart.py  LogMagChart.py  Makefile  Marker.py  NanoVNASaver.desktop  NanoVNASaver.py  NanoVNASaver_48x48.icns  NanoVNA_F.py  Pipfile  README.md  README.rst  SmithChart.py  SweepWorker.py  Touchstone.py  Version.py  build-macos-app.sh  debug.sh  flatpak.manifest.yml  io.github.nanovnasaver.nanovna-saver.metainfo.xml  io.github.zarath.nanovna-saver.yml  main.py  make-exe.bat  nanovna-saver-headless.py  nanovna-saver-sark110.iss  nanovna-saver.py  pyproject.toml  requirements.txt  requirements_win.txt  sark110.rules  setup.cfg  setup.py  (+3 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  bug_report.md  config.yml
.github/workflows/: codeql-analysis.yml  pythonapp.yml  pythoncoverage.yml  release.yml  release_linux.yml  release_linux_modern.yml  release_macos.yml  release_macos_app.yml  release_win.yml  release_win32.yml  stale.yml
NanoVNASaver/: About.py  Analysis.py  AnalyticTools.py  Bands-LTE-1-2-3-4-8-12-20.ini  Calibration.py  Chart.py  Defaults.py  Formatting.py  Hardware.py  Inputs.py  LogMagChart.py  Marker.py  NanoVNASaver.py  RFTools.py  SITools.py  Settings.py  SmithChart.py  SweepSettings.py  SweepWorker.py  Touchstone.py  UIManager.py  Version.py  __main__.py  about.py  light-colored.css  sark110.py  skins.py  skins_utils.py
NanoVNASaver/Analysis/: Analysis.py  AntennaAnalysis.py  BandPassAnalysis.py  BandStopAnalysis.py  Base.py  EFHWAnalysis.py  HighPassAnalysis.py  LowPassAnalysis.py  PeakSearchAnalysis.py  ResonanceAnalysis.py  SimplePeakSearchAnalysis.py  VSWRAnalysis.py  __init__.py
NanoVNASaver/Analysis_temp/: LowPassAnalysis.py
NanoVNASaver/Bands/: Bands-2.4G.ini  Bands-GPS.ini  Bands-LTE-CE.ini  Bands-LTE-FCC.ini  Bands-LoRaSF.ini  Bands-all.ini
NanoVNASaver/Chart.split/: CLogMag.py  Inductance.py  TDR.py
NanoVNASaver/Charts/: CLogMag.py  Capacitance.py  Chart.py  Frequency.py  GroupDelay.py  Inductance.py  LogMag.py  Magnitude.py  MagnitudeZ.py  MagnitudeZSeries.py  MagnitudeZShunt.py  Permeability.py  Phase.py  Polar.py  QFactor.py  RI.py  RIMu.py  RISeries.py  RIShunt.py  RIZ.py  RIZSeries.py  SParam.py  Smith.py  Square.py  TDR.py  VSWR.py  __init__.py
NanoVNASaver/Controls/: Control.py  MarkerControl.py  SerialControl.py  SweepControl.py  __init__.py
NanoVNASaver/Hardware/: AVNA.py  Hardware.py  Hardware_new.py  MR100.py  NanoVNA.py  NanoVNA_F.py  NanoVNA_F_V2.py  NanoVNA_H.py  NanoVNA_H4.py  NanoVNA_V2.py  Serial.py  TinySA.py  VNA.py  __init__.py
NanoVNASaver/Hardware.split/: NanoVNA_H.py  NanoVNA_V2.py
NanoVNASaver/Marker/: Delta.py  Settings.py  Values.py  Widget.py  __init__.py
NanoVNASaver/Settings/: Bands.py  Sweep.py  __init__.py
NanoVNASaver/Widgets/: MarkerControl.py  SweepControl.py  __init__.py
NanoVNASaver/Windows/: About.py  AnalysisWindow.py  Bands.py  Calibration.py  CalibrationSettings.py  Defaults.py  DeviceSettings.py  DisplaySettings.py  Files.py  MarkerSettings.py  NanoVNASaver.splitted.py  Screenshot.py  SweepSettings.py  TDR.py  __init__.py
NanoVNASaver/Windows.temp/: About.py  NanoVNASaver.splitted.py  Screenshot.py  TDR.py
NanoVNASaver/contrib/: utils.py
NanoVNASaver/skins/: dark-colored.css  light-colored.css  light-monochrome.css  style.css
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  authors.rst  conf.py  index.rst  license.rst
docs/man/: NanoVNASaver.1
skins/: dark-colored.css  dark-monochrome.css  default.css  light-colored.css  light-monochrome.css
src/: Calibration.py  CalibrationGuide.py  CalibrationSettings.py  NanoVNASaverHeadless.py  RFTools.py  SITools.py  Sweep.py  SweepWorker.py  Touchstone.py
src/Hardware/: AVNA.py  Hardware.py  JNCRadio_VNA_3G.py  NanoVNA.py  NanoVNA_F.py  NanoVNA_F_V2.py  NanoVNA_H.py  NanoVNA_H4.py  NanoVNA_V2.py  SV4401A.py  SV6301A.py  TinySA.py  VNA.py  Version.py
src/NanoVNASaver/: About.py  AnalyticTools.py  Calibration.py  Defaults.py  Formatting.py  Inputs.py  NanoVNASaver.py  RFTools.py  SITools.py  SweepWorker.py  Touchstone.py  Version.py  __init__.py  __main__.py  _version.py  app_version.py
src/NanoVNASaver/Analysis/: AntennaAnalysis.py  BandPassAnalysis.py  BandStopAnalysis.py  Base.py  EFHWAnalysis.py  HighPassAnalysis.py  LowPassAnalysis.py  PeakSearchAnalysis.py  ResonanceAnalysis.py  SimplePeakSearchAnalysis.py  VSWRAnalysis.py
src/NanoVNASaver/Charts/: CLogMag.py  Capacitance.py  Chart.py  Frequency.py  GroupDelay.py  Inductance.py  LogMag.py  Magnitude.py  MagnitudeZ.py  MagnitudeZSeries.py  MagnitudeZShunt.py  Permeability.py  Phase.py  Polar.py  QFactor.py  RI.py  RIMu.py  RIZ.py  RIZSeries.py  RIZShunt.py  SParam.py  Smith.py  Square.py  TDR.py  VSWR.py  __init__.py
src/tools/: project_clean.py  setuptools_wrapper.py  ui_compile.py
test/: __init__.py  test_analytics.py  test_formatFrequency.py  test_formatSweepFrequency.py  test_formatting.py  test_parseFrequency.py  test_rftools.py  test_settings.py  test_sitools.py  test_sweep.py  test_touchstone.py  test_version.py
test/data/: attenuator-0643_RI.s2p  broken_pair.s1p  bug_159.s1p  db.s2p  ma.s2p  scikit_unordered.s2p  t130-2.s1p  test_1port_broken.cal  test_1port_fixed.cal  unordered.s1p  valid.s2p  valid_with_datacomment.s1p
tests/: conftest.py  test_analytics.py  test_formatSweepFrequency.py  test_formatting.py  test_parseFrequency.py  test_rftools.py  test_settings.py  test_sitools.py  test_sweep.py  test_touchstone.py  test_truncate.py  test_version.py
tests/Hardware/: test_litevna_64.py
tests/data/: attenuator-0643_DB.s2p  attenuator-0643_MA.s2p  attenuator-0643_RI.s2p  broken_pair.s2p  bug_455.s1p  db.s2p  ferrit_1.s1p  ft240-43.s1p  full_v2_200_300.cal  ma.s2p  missing_pair.s2p  scikit_unordered.s2p  sol_27_30.cal  sucoflex290mm.s1p  test_2port_long.cal  valid.s1p  valid.s2p  wire-200-300.s1p
tests/utils/: test_app_versions.py  test_version.py
(+48 files in other folders)
