[metadata]
name = NanoVNASaver
author = Rune B. Broberg
author_email= NanoVNA-Saver@users.noreply.github.com
license = GNU GPL V3
license_files = LICENSE,
description = GUI for the NanoVNA and derivates
long_description = file: README.md
url = https://github.com/NanoVNA-Saver/nanovna-saver
version = attr: NanoVNASaver.About.VERSION
platforms= all

[options]
packages = find_namespace:
install_requires=
    pyserial>=3.5
    PyQt5>=5.15.0
    numpy>=1.21.1
    scipy>=1.7.1
    Cython>=0.29.24
python_requires = >=3.8, <4

[options.entry_points]
console_scripts =
    NanoVNASaver = NanoVNASaver.__main__:main

